@@ -51,7 +51,6 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 import java.util.EnumSet;
 import java.util.Map;
 import java.util.StringTokenizer;
@@ -473,8 +472,13 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
             } catch (IOException e) {
                 throw Errors.createTypeError(e.getMessage());
             } catch (InterruptedException e) {
-                throw Errors.createTypeError(e.getMessage());
+                throw rethrow(e);
             }
+        }
+
+        @SuppressWarnings({"unchecked"})
+        static <E extends Throwable> RuntimeException rethrow(Throwable ex) throws E {
+            throw (E) ex;
         }
 
         private static Thread captureThread(IOException[] exception, int exceptionIdx, StringBuilder outBuffer, InputStream stream, String name) {
@@ -580,7 +584,7 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
 
         @TruffleBoundary
         protected final Source sourceFromURL(URL url) {
-            assert getContext().isOptionNashornCompatibilityMode();
+            assert getContext().isOptionNashornCompatibilityMode() || getContext().isOptionLoadFromURL();
             try {
                 return Source.newBuilder(JavaScriptLanguage.ID, url).name(url.getFile()).build();
             } catch (IOException | SecurityException e) {
@@ -1153,7 +1157,8 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
         @TruffleBoundary(transferToInterpreterOnException = false)
         private Source sourceFromPath(String path, JSRealm realm) {
             Source source = null;
-            if (realm.getContext().isOptionNashornCompatibilityMode() && path.indexOf(':') != -1) {
+            JSContext ctx = realm.getContext();
+            if ((ctx.isOptionNashornCompatibilityMode() || ctx.isOptionLoadFromURL()) && path.indexOf(':') != -1) {
                 source = sourceFromURI(path);
                 if (source != null) {
                     return source;
@@ -1229,7 +1234,7 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
         }
 
         private Source sourceFromURI(String resource) {
-            if (JSTruffleOptions.SubstrateVM || !getContext().isOptionNashornCompatibilityMode()) {
+            if (JSTruffleOptions.SubstrateVM || !getContext().isOptionNashornCompatibilityMode() && !getContext().isOptionLoadFromURL()) {
                 return null;
             }
             if ((resource.startsWith(LOAD_NASHORN) || resource.startsWith(LOAD_CLASSPATH) || resource.startsWith(LOAD_FX))) {
@@ -1392,14 +1397,14 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
 
     }
 
-    static Object getFileFromArgument(Object arg, TruffleLanguage.Env env) {
+    static TruffleFile getFileFromArgument(Object arg, TruffleLanguage.Env env) {
         CompilerAsserts.neverPartOfCompilation();
         try {
             String path;
             if (JSRuntime.isString(arg)) {
                 path = arg.toString();
             } else if (env.isHostObject(arg) && env.asHostObject(arg) instanceof File) {
-                return verifyFile((File) env.asHostObject(arg));
+                path = ((File) env.asHostObject(arg)).getPath();
             } else {
                 path = JSRuntime.toString(arg);
             }
@@ -1412,13 +1417,6 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
         } catch (SecurityException e) {
             throw Errors.createErrorFromException(e);
         }
-    }
-
-    private static File verifyFile(File file) {
-        if (!file.isFile()) {
-            throw Errors.createNotAFileError(file.getPath());
-        }
-        return file;
     }
 
     /**
@@ -1435,14 +1433,10 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
         @Specialization
         @TruffleBoundary(transferToInterpreterOnException = false)
         protected String read(Object fileParam) {
-            Object file = getFileFromArgument(fileParam, getContext().getRealm().getEnv());
+            TruffleFile file = getFileFromArgument(fileParam, getContext().getRealm().getEnv());
 
             try {
-                if (file instanceof TruffleFile) {
-                    return readImpl(((TruffleFile) file).newBufferedReader());
-                } else {
-                    return readImpl(Files.newBufferedReader(((File) file).toPath()));
-                }
+                return readImpl(file.newBufferedReader());
             } catch (Exception ex) {
                 throw Errors.createErrorFromException(ex);
             }
@@ -1475,15 +1469,10 @@ public class GlobalBuiltins extends JSBuiltinsContainer.SwitchEnum<GlobalBuiltin
         @Specialization
         @TruffleBoundary(transferToInterpreterOnException = false)
         protected final DynamicObject readbuffer(Object fileParam) {
-            Object file = getFileFromArgument(fileParam, getContext().getRealm().getEnv());
+            TruffleFile file = getFileFromArgument(fileParam, getContext().getRealm().getEnv());
 
             try {
-                final byte[] bytes;
-                if (file instanceof TruffleFile) {
-                    bytes = ((TruffleFile) file).readAllBytes();
-                } else {
-                    bytes = Files.readAllBytes(((File) file).toPath());
-                }
+                final byte[] bytes = file.readAllBytes();
 
                 final DynamicObject arrayBuffer;
                 if (getContext().isOptionDirectByteBuffer()) {
